# pm-workspace

./: .claudeignore  .confidentiality-signature  .gitattributes  .gitignore  .gitleaks.toml  .pr-summary.md  .skills-lock.json  ACKNOWLEDGMENTS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE-ENTERPRISE.md  README.ca.md  README.de.md  README.en.md  README.eu.md  README.fr.md  README.gl.md  README.it.md  README.md  README.pt.md  SECURITY-AUDIT-2026-03-09.md  SECURITY.md  SKILLS.md  TRADEMARK.md  install.ps1  install.sh  opencode.json  package.json  requirements-vector.txt
.ci-baseline/: README.md
.claude/: AGENTS-INDEX.md  mcp.json  savia-identity.md  savia-roadmap.md  settings.json  settings.local.json  skill-manifests.json
.claude-plugin/: plugin.json
.context-index/: PROJECT-TEMPLATE.ctx  WORKSPACE.ctx
.github/: pull_request_template.md
.human-maps/: INDEX.hcm
.opencode/: .gitignore  CLAUDE.md  HOOKS-STRATEGY.md  README.md  init-pm.sh  install.ps1  install.sh  package.json  run-all-tests.sh  tsconfig.json
.scm/: INDEX.scm  resources.json
CHANGELOG.d/: 20260502-era190-batch1-pocock.md  20260502-era191-batch1.md  README.md  (+142 more)
projects/savia-monitor/src-tauri/: Cargo.toml  tauri.conf.json
projects/savia-monitor/src-tauri/.cargo/: config.toml
projects/savia-monitor/src-tauri/capabilities/: default.json
projects/savia-monitor/src-tauri/icons/: icon.icns
projects/savia-monitor/src-tauri/src/: config.rs  git.rs  logs.rs  main.rs  sessions.rs  shield.rs  shield_test.rs  usage.rs  workflow.rs
(+3216 files in other folders)
