[package]
name = "savia-monitor"
version = "0.1.0"
description = "Savia Monitor — Desktop tray app for Savia Shield"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls-vendored"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
